# Anki-MCAT

./: .dprint.json  .gitignore  CONTRIBUTORS  Cargo.toml  README.md  justfile  package.json  taxonomy.json
.github/workflows/: auto-close-missing-issue.yml  check-linked-issue.yml  ci.yml  docs-site.yml
docs/: ReadyMCAT-PRD.md  architecture.md  brainlift-mcat.md  development.md  readymcat-points-at-stake.md
ios/: README.md
ios/ReadyMCAT/: AILadderService.swift  APIKeyStore.swift  AnkiEngine.swift  AppModel.swift  ChoiceReviewer.swift  Content.swift  ContentView.swift  DashboardView.swift  DeckTree.swift  Diagnostic.swift  DiagnosticView.swift  FRReviewerView.swift  GeneratedLadderView.swift  Grading.swift  HomeView.swift  Info.plist  LadderGen.swift  LadderProxyClient.swift  PointsAtStake.swift  Proto.swift  ProxyConfigStore.swift  ReadyMCATApp.swift  ReviewSession.swift  ReviewerComponents.swift  RootView.swift  SettingsView.swift  StudyView.swift  SyncHarness.swift  SyncManager.swift  SyncView.swift  Theme.swift  WebView.swift
ios/ReadyMCAT.xcodeproj/: project.pbxproj
ios/ReadyMCATTests/: main.swift
ios/build-collection/: collection.anki2
ios/docs/: device-build.md
ios/scripts/: build-collection.sh  build-rust.sh  desktop-sync.py  host-ffi-smoke.py  run-sim.sh  sync-server.sh  sync_conflict.py  test-laddergen.sh  verify-sync-conflict.sh  verify-sync.sh
proto/anki/: deck_config.proto  diagnostic.proto  points_at_stake.proto
pylib/tests/: test_diagnostic.py  test_points_at_stake.py  test_readymcat_bank.py  test_readymcat_dashboard.py  test_readymcat_flashcard_demo.py  test_readymcat_free_response.py  test_readymcat_home.py  test_readymcat_integration.py  test_readymcat_ladder_gen.py  test_readymcat_passage.py
qt/aqt/: main.py  mediasrv.py  readymcat.py  readymcat_demo.py  readymcat_home.py  readymcat_ladder_gen.py  readymcat_provision.py  readymcat_tools.py  reviewer.py  sync.py  toolbar.py  webview.py
qt/tests/: test_mediasrv.py  test_readymcat_first_launch.py  test_readymcat_flashcard_flow.py  test_readymcat_ladder_cache.py  test_readymcat_landing.py  test_readymcat_single_window.py
readymcat/: DEMO-SUNDAY.md  PROOF-FRIDAY.md  PROOF-SUNDAY.md  PROOF.md  README.md  RESULTS.md  SUBMISSION.md
readymcat-mockups/: home_hub_A.html  home_hub_A_abstain.html  home_hub_B.html
readymcat/content/: bio_biochem.json  bio_biochem_SOURCES.md  build_chem_phys.py  build_free_response_chem_phys.py  chem_phys.json  chem_phys_SOURCES.md  free_response_bio_biochem.json  free_response_bio_biochem_SOURCES.md  free_response_bio_biochem_build.py  free_response_chem_phys.json  free_response_chem_phys_SOURCES.md  free_response_psych_soc.json  free_response_psych_soc_SOURCES.md  free_response_psych_soc_build.py  free_response_psych_soc_validate.py  free_response_validate.py  passage_bio_biochem.json  passage_bio_biochem_SOURCES.md  passage_bio_biochem_validate.py  passage_cars.json  passage_cars_SOURCES.md  passage_cars_build.py  passage_cars_validate.py  passage_chem_phys.json  passage_chem_phys_SOURCES.md  passage_chem_phys_validate.py  passage_psych_soc.json  passage_psych_soc_SOURCES.md  passage_psych_soc_build.py  passage_psych_soc_validate.py  psych_soc.json  psych_soc_SOURCES.md  (+3 more)
rsios/: Cargo.toml
rsios/include/: module.modulemap  rsios.h
rsios/src/: lib.rs
tools/mcat_bench/: Cargo.toml  bench-results.json  bench-results.md
tools/mcat_bench/src/: main.rs
tools/sample_deck/: Cargo.toml
tools/sample_deck/src/: main.rs
ts/: vite.config.ts
(+93 files in other folders)
